docs: update data-access and security docs for JWT and Spring Security pattern